# kinematics

./: .gitignore  CMakeLists.txt  Kinematics.slnx  README.md
.claude/: launch.json
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
Collision/: Spring.cs
Dynamics/: Body.cs
Math/: Vector2.cs
Source/Collision/: Collision.cs  CollisionInfo.cs  PointMass.cs  Shape.cs
Source/Dynamics/: Body.cs  PressureBody.cs  SpringBody.cs
Source/Math/: Vector2Extensions.cs  Vector3.cs
Source/Utils/: KinematicsController.cs
Utils/: KinematicsController.cs
demo/: .gitignore  README.md  _Imports.razor  app.css  app.js  build.sh  demo.csproj  demo_scenes.cpp  index.html
demo-cpp/: README.md  build.sh  demo_scenes.cpp  serve.mjs
demo/KinematicsWeb/: KinematicsWeb.csproj  Program.cs  _Imports.razor
demo/KinematicsWeb/Layout/: NavMenu.razor
demo/KinematicsWeb/Properties/: launchSettings.json
demo/KinematicsWeb/wwwroot/: index.html
demo/Layout/: MainLayout.razor.css
demo/Pages/: Home.razor
demo/Scenes/: ChainScene.cs  IDemoScene.cs  PressureBodyScene.cs  SoftBodyScene.cs
demo/wwwroot/: index.html
demo/wwwroot/css/: app.css
demo/wwwroot/js/: renderer.js
src/: Kinematics.csproj  kinematics.h  kinematics.hpp  kinematics_c.cpp  kn_internal.h
src/CApi/: kinematics_c.cpp  kinematics_c.h  kn_internal.hpp
src/Collision/: AABB.cpp  AABB.h  AABB.hpp  Chain.cpp  Chain.h  Chain.hpp  Collision.cpp  Collision.h  Collision.hpp  CollisionInfo.cpp  CollisionInfo.cs  CollisionInfo.h  CollisionInfo.hpp  PointMass.cpp  PointMass.cs  PointMass.h  PointMass.hpp  Shape.cpp  Shape.h  Shape.hpp  Spring.cpp  Spring.h  Spring.hpp
src/Dynamics/: Body.cpp  Body.h  Body.hpp  PressureBody.cpp  PressureBody.h  PressureBody.hpp  SpringBody.cpp  SpringBody.h  SpringBody.hpp
src/Math/: Mathf.cpp  Mathf.cs  Mathf.h  Mathf.hpp  Vector2.cpp  Vector2.h  Vector2.hpp  Vector3.cpp  Vector3.h  Vector3.hpp
src/Utils/: Bitmask.cpp  Bitmask.h  Bitmask.hpp  KinematicsController.cpp  KinematicsController.cs  KinematicsController.h  KinematicsController.hpp
tests/: test_capi.cpp  test_chain.cpp  test_collision.cpp  test_controller.cpp  test_dynamics.cpp  test_framework.h  test_main.cpp  test_math.cpp  test_umbrella.cpp
